<resources>
    <string name="app_name">TravelIn</string>
    <string name="title_home">Map</string>
    <string name="title_dashboard">Albums</string>
    <string name="description">Description</string>
    <string name="Title">Titre</string>
    <string name="save">Enregistrer</string>
    <string name="media_form">Add album</string>
    <string name="format_date">dd/MM/yyyy HH:mm</string>
    <string name="load_media">choisir un album</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="long_click_on_map_to_create_album">  * Long Click on map to create album  </string>
    <string name="title_of_the_new_album">Voulez-vous créer un nouvel album ici ?</string>
    <string name="preference_file_key">com.travel.in</string>
    <string name="flag_time">map_value</string>
    <string name="title_notifications">Notifications</string>
</resources>
